no commit message

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,7 +45,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.derby.jar}:\
     ${file.reference.derbyshared.jar}:\
-    ${file.reference.derbytools.jar}
+    ${file.reference.derbytools.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
